Add header to the landing page
Conform the exercise instructions the landing page header has been
created by writing the relevant html and css code.

Furthermore the README file has been updated to have some basic
information regarding the assignment.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,5 +9,20 @@
 </head>
 
 <body>
+<!-- Header -->
+    <nav class="header">
+        <div class="logo">Header Logo</div>
+        <ul>
+            <li><a href=".">header link one</a></li>
+            <li><a href=".">header link two</a></li>
+            <li><a href=".">header link three</a></li>
+        </ul>
+    </nav>
+
+<!-- Main -->
+
+<!-- Footer -->
+
 </body>
+
 </html>
