--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
         </ul>
     </nav>
 
-<!-- Main -->
-
+<!-- Content -->
+    <div class="content-block-one">
+    </ul>
+        <div class="text">
+            <div class="hero-main">This website is awesome</div>
+            <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button>Sign-up</button>
+        </div>
+        <div class="image">
+            <div class="image-text">this is a placeholder for an image</div>
+            <!-- <img src="./images/odin-landing-page.png" alt="This is a placeholder" height="auto" width="150px"> -->
+        </div>
+    </div>
 <!-- Footer -->
 
 </body>
