Add a footer to bottom of the index page
Added a footer to the index page that will always stay at the bottom
thanks to flex display column settings and a new body div class.

Also slightly adjusted the hero content css code allowing a more
responsive design that includes wraping when resizing a browser window.

--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
     </nav>
 
 <!-- Content -->
-    <div class="content-hero">
-        <div class="hero-text-block">
-            <div class="hero-main-text">This website is awesome</div>
-            <div class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <button>Sign-up</button>
-        </div>
-        <div class="hero-image-block">
-            <div class="hero-image-text">this is a placeholder for an image</div>
-            <!-- <img src="./images/odin-landing-page.png" alt="This is a placeholder" height="auto" width="150px"> -->
+    <div class="body">
+        <div class="content-hero">
+            <div class="hero-text-block">
+                <div class="hero-main-text">This website is awesome</div>
+                <div class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>Sign-up</button>
+            </div>
+            <div class="hero-image-block">
+                <div class="hero-image-text">this is a placeholder for an image</div>
+                <!-- <img src="./images/odin-landing-page.png" alt="This is a placeholder" height="auto" width="150px"> -->
+            </div>
         </div>
     </div>
 <!-- Footer -->
-
+    <div class="footer">
+        <div class="footer-text">Copyright © The Odin Project 2024</div>
+    </div>
 </body>
 
 </html>
