--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
         </div>
         
         <!-- Body - Quote -->
+        <div class="body-quote">
+            <div class="quote-block">
+                <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="quote-author">Thor, God of Thunder</div>
+            </div>
+        </div>
         
         <!-- Body - CTA  -->
     </div>
