Add Call To Action block to index page
Added the call to action html and css to the index page for this The
Odin Project assignment.

This cta block contains:
- a title
- some secondary text
- a button

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
         </div>
         
         <!-- Body - CTA  -->
+        <div class="body-cta">
+            <div class="cta-block">
+                <div class="cta-text-block">
+                    <div class="cta-title">Call to action! It's time!</div>
+                    <div class="cta-text">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button>Sign-up</button>
+            </div>
+        </div>
     </div>
 
 <!-- Footer -->
